[package]
name = "sos-database-upgrader"
version = "0.17.3"
edition = "2024"
description = "Upgrade from file system to database storage for the Save Our Secrets SDK"
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
full = ["archive"]
archive = ["sos-backend/archive"]

[dependencies]
sos-core.workspace = true
sos-backend.workspace = true
sos-external-files.workspace = true
sos-client-storage = { workspace = true, features = ["full"] }
sos-database = { workspace = true, features = ["full"] }
sos-filesystem = { workspace = true, features = ["full"] }
sos-audit.workspace = true
sos-preferences.workspace = true
sos-system-messages.workspace = true
sos-server-storage = { workspace = true, features = ["full"] }
sos-sync.workspace = true
sos-vault.workspace = true
sos-vfs.workspace = true

thiserror.workspace = true
futures.workspace = true
tracing.workspace = true
serde_json.workspace = true
uuid.workspace = true
indexmap.workspace = true
binary-stream.workspace = true
async-trait.workspace = true
secrecy.workspace = true
sha2.workspace = true
serde.workspace = true
tokio.workspace = true
url.workspace = true
tokio-stream.workspace = true
tempfile.workspace = true
