[package]
name = "sos-extension-service"
version = "0.17.1"
edition = "2021"
description = "Browser extension service for the Save Our Secrets SDK."
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[dependencies]
sos-account = { workspace = true, features = ["clipboard", "search"] }
sos-backend.workspace = true
sos-core.workspace = true
sos-ipc = { workspace = true, features = ["extension-helper-server", "search", "clipboard", "files"] }
sos-net = { workspace = true, features = ["clipboard", "search", "files"] }
sos-changes = { workspace = true, features = ["changes-consumer"] }
tokio.workspace = true
anyhow.workspace = true
xclipboard.workspace = true
tracing.workspace = true

[[bin]]
name = "sos-extension-helper"
path = "src/main.rs"
