[package]
name = "sos-external-files"
version = "0.16.2"
edition = "2021"
description = "External file blob support for the Save Our Secrets SDK"
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[dependencies]
sos-core = { workspace = true, features = ["files"] }
sos-vault.workspace = true
sos-vfs.workspace = true

indexmap.workspace = true
tracing.workspace = true
