[package]
name = "sos-external-files"
version = "0.16.3"
edition = "2021"
description = "External file blob support for the Save Our Secrets SDK"
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[features]
full = ["files"]
files = []

[dependencies]
sos-core.workspace = true
sos-vault.workspace = true
sos-vfs.workspace = true

indexmap.workspace = true
tracing.workspace = true
