[package]
name = "sos-external-files"
version = "0.16.7"
edition = "2021"
description = "External file blob support for the Save Our Secrets SDK"
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[package.metadata.docs.rs]
features = [ "full" ]
rustdoc-args = ["--cfg", "docsrs"]

[features]
full = ["files"]
files = ["sos-core/files"]

[dependencies]
sos-core.workspace = true
sos-vault.workspace = true
sos-vfs.workspace = true

indexmap.workspace = true
tracing.workspace = true

[build-dependencies]
rustc_version.workspace = true
