[package]
name = "sos-filesystem"
version = "0.16.0"
edition = "2021"
description = "Filesystem event logs for the Save Our Secrets SDK"
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[features]
full = ["files", "preferences", "system-messages"]
files = ["sos-core/files"]
preferences = ["sos-preferences", "serde_json"]
system-messages = ["sos-system-messages", "serde_json", "urn"]

[dependencies]
sos-core.workspace = true
sos-vault.workspace = true
sos-vfs.workspace = true

sos-system-messages = { workspace = true, optional = true }
sos-preferences = { workspace = true, optional = true }

thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
binary-stream.workspace = true
async-stream.workspace = true
parking_lot.workspace = true
indexmap.workspace = true
tempfile.workspace = true
tracing.workspace = true

urn = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[build-dependencies]
rustc_version.workspace = true
