[package]
name = "sos-filesystem"
version = "0.16.2"
edition = "2021"
description = "Filesystem event logs for the Save Our Secrets SDK"
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[features]
full = ["archive", "audit", "files", "preferences", "system-messages"]
archive = [
  "sos-archive",
  "dep:serde",
  "dep:sha2",
  "dep:uuid",
  "dep:walkdir",
  "dep:time",
  "dep:hex",
  "dep:futures-util",
]
audit = ["sos-audit"]
files = ["sos-core/files"]
preferences = ["sos-preferences"]
system-messages = ["sos-system-messages", "dep:urn"]

[dependencies]
sos-core.workspace = true
sos-reducers.workspace = true
sos-vault.workspace = true
sos-vfs.workspace = true

sos-archive = { workspace = true, optional = true }
sos-audit = { workspace = true, optional = true }
sos-system-messages = { workspace = true, optional = true }
sos-preferences = { workspace = true, optional = true }

thiserror.workspace = true
async-trait.workspace = true
serde_json.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
binary-stream.workspace = true
async-stream.workspace = true
parking_lot.workspace = true
indexmap.workspace = true
tracing.workspace = true
async-fd-lock.workspace = true

# preferences / system messages
urn = { workspace = true, optional = true }

# archive
async_zip = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }
sanitize-filename = { workspace = true, optional = true }
time = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

[build-dependencies]
rustc_version.workspace = true
