[package]
name = "sos-integration-tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = []
enable-cli-tests = []

[dependencies]
tokio.workspace = true
http.workspace = true
anyhow.workspace = true

[dependencies.sos-ipc]
features = [
  "server",
  "client",
  "native-bridge-server",
  "native-bridge-client",
  "integration",
  "account",
  "archive",
  "contacts", 
  "migrate",
  "search",
  "files",
]
path = "../ipc"

[dependencies.sos-sdk]
path = "../sdk"

[dev-dependencies]
binary-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
async-recursion.workspace = true
futures.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
serde.workspace = true
indexmap.workspace = true
anyhow.workspace = true
secrecy.workspace = true
http.workspace = true

copy_dir = "0.1"
maplit2 = "1"
tempfile = "3.5"
pretty_assertions = "1.4"
sos-test-utils = { path = "../test_utils" }

[dev-dependencies.sos-net]
features = ["full"]
path = "../net"

[dev-dependencies.sos-server]
default-features = false
features = ["listen", "audit", "pairing"]
path = "../server"

[[bin]]
name = "test-native-bridge"
path = "src/test_native_bridge.rs"
