[package]
name = "keychain_parser"
version = "0.1.2"
edition = "2021"
description = "Parse the output of security(1) dump-keychain."
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[dependencies]
thiserror.workspace = true
logos.workspace = true
plist.workspace = true
