[package]
name = "sos-logs"
version = "0.16.2"
edition = "2021"
description = "Log file helpers for the Save Our Secrets SDK."
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
sos-core.workspace = true

thiserror.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
rev_buf_reader.workspace = true
time.workspace = true

[build-dependencies]
rustc_version.workspace = true
