[package]
name = "sos-net"
version = "0.16.2"
edition = "2021"
description = "Networking library for the Save Our Secrets SDK."
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
full = [
  "audit",
  "archive",
  "contacts",
  "files",
  "hashcheck",
  "listen",
  "migrate",
  "pairing",
  "preferences",
  "search",
  "security-report",
  "keychain-access",
  "system-messages",
  "clipboard",
]

listen = ["sos-protocol/listen"]
hashcheck = ["sos-protocol/hashcheck"]
audit = ["sos-sdk/audit"]
archive = ["sos-sdk/archive", "sos-protocol/archive", "sos-account/archive"]
files = ["sos-sdk/files", "sos-protocol/files"]
clipboard = ["sos-account/clipboard"]
contacts = ["sos-account/contacts", "sos-protocol/contacts"]
migrate = ["sos-account/migrate", "sos-migrate"]
keychain-access = ["sos-migrate/keychain-access"]
recovery = ["sos-sdk/recovery"]
pairing = ["dep:snow", "sos-protocol/pairing"]
search = ["sos-sdk/search", "sos-protocol/search"]

preferences = ["sos-account-extras/preferences"]
security-report = ["sos-account-extras/security-report"]
system-messages = ["sos-account-extras/system-messages"]

[dependencies]
sos-account.workspace = true
sos-core.workspace = true
sos-sdk.workspace = true
sos-database.workspace = true
sos-protocol = { workspace = true, features = ["network-client"] }
sos-migrate = { workspace = true, optional = true }
sos-account-extras = { workspace = true, optional = true }

tokio-util.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
async-recursion.workspace = true
http.workspace = true
serde_json.workspace = true
serde.workspace = true
uuid.workspace = true
hex.workspace = true
sha2.workspace = true
sha3.workspace = true
secrecy.workspace = true
serde_with.workspace = true
rand.workspace = true
url.workspace = true
futures.workspace = true
urlencoding.workspace = true
indexmap.workspace = true
binary-stream.workspace = true
rs_merkle.workspace = true
prost.workspace = true

# pairing
snow = { version = "0.9", optional = true }

tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }

[dev-dependencies]
anyhow.workspace = true

[build-dependencies]
rustc_version.workspace = true
