[package]
name = "sos-net"
version = "0.17.7"
edition = "2024"
description = "Networking library for the Save Our Secrets SDK."
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
full = [
  "audit",
  "archive",
  "contacts",
  "files",
  "hashcheck",
  "listen",
  "migrate",
  "pairing",
  "search",
  "keychain-access",
  "clipboard",
]

audit = ["sos-audit", "sos-account/audit"]
listen = ["sos-protocol/listen"]
hashcheck = ["sos-protocol/hashcheck"]
archive = [
  "sos-account/archive",
  "sos-filesystem/archive",
  "sos-database/archive",
]
files = [
  "sos-account/files",
  "sos-core/files",
  "sos-external-files/files",
  "sos-protocol/files", 
  "sos-remote-sync/files",
  "sos-client-storage/files",
  "sos-account/files",
]
clipboard = ["sos-account/clipboard"]
contacts = ["sos-account/contacts", "sos-protocol/contacts"]
migrate = ["sos-account/migrate", "sos-migrate"]
keychain-access = ["sos-migrate/keychain-access"]
pairing = ["dep:snow", "sos-protocol/pairing"]
search = ["sos-search", "sos-account/search", "sos-protocol/search"]

# preferences = ["sos-backend/preferences"]
# security-report = ["sos-security-report"]
# system-messages = ["sos-backend/system-messages"]

[dependencies]
sos-account.workspace = true
sos-core.workspace = true
sos-backend.workspace = true
sos-database.workspace = true
sos-filesystem.workspace = true
sos-client-storage.workspace = true
sos-login.workspace = true
sos-protocol = { workspace = true, features = ["network-client"] }
sos-reducers.workspace = true
sos-remote-sync.workspace = true
sos-signer.workspace = true
sos-password.workspace = true
sos-sync.workspace = true
sos-vault.workspace = true
sos-vfs.workspace = true

sos-audit = { workspace = true, optional = true }
sos-external-files = { workspace = true, optional = true }
sos-search = { workspace = true, optional = true }
sos-migrate = { workspace = true, optional = true }

tokio-util.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
async-recursion.workspace = true
http.workspace = true
serde_json.workspace = true
serde.workspace = true
uuid.workspace = true
hex.workspace = true
sha2.workspace = true
sha3.workspace = true
secrecy.workspace = true
serde_with.workspace = true
rand.workspace = true
url.workspace = true
futures.workspace = true
urlencoding.workspace = true
indexmap.workspace = true
binary-stream.workspace = true
rs_merkle.workspace = true
prost.workspace = true
tokio.workspace = true

# pairing
snow = { workspace = true, optional = true }
