[package]
name = "sos-password"
version = "0.16.0"
edition = "2021"
description = "Password generation and helpers for the Save Our Secrets SDK."
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[dependencies]
thiserror.workspace = true
rand.workspace = true
chbs.workspace = true
zxcvbn.workspace = true
secrecy.workspace = true
once_cell.workspace = true

[dev-dependencies]
anyhow.workspace = true

[build-dependencies]
rustc_version.workspace = true
