[package]
name = "sos-password"
version = "0.17.0"
edition = "2021"
description = "Password generation and helpers for the Save Our Secrets SDK."
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
sos-core.workspace = true
thiserror.workspace = true
rand.workspace = true
chbs.workspace = true
zxcvbn.workspace = true
secrecy.workspace = true
once_cell.workspace = true

[build-dependencies]
rustc_version.workspace = true
