[package]
name = "sos-platform-authenticator"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(all(not(target_os = "android"), not(target_os = "macos")))'.dependencies]
keyring.workspace = true

[target.'cfg(not(target_os = "linux"))'.dependencies]
robius-authentication = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
