[package]
name = "sos-platform-authenticator"
version = "0.17.0"
edition = "2021"
description = "Platform authenticator and keyring suppport for the Save Our Secrets SDK."
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true
secrecy.workspace = true
http.workspace = true

[target.'cfg(all(not(target_os = "android"), not(target_os = "macos")))'.dependencies]
keyring.workspace = true

[target.'cfg(not(target_os = "linux"))'.dependencies]
robius-authentication = "0.1"

[target.'cfg(target_os = "macos")'.dependencies.security-framework]
version = "3.1"
# path = "../../../../forks/rust-security-framework/security-framework"

[build-dependencies]
rustc_version.workspace = true
